fixed previous test